rmdcev v1.2.4 (Release date: 2020-09-23)
==============

- move to R 4.0 requirement
- add single_scale option for lc models


rmdcev v1.2.3 (Release date: 2020-09-15)
==============

- fix solaris compile issue


rmdcev v1.2.2
==============

- fix error in unconditional welfare calculations
- add additional tests

rmdcev v1.2.1
==============

- fix alt_name issue if alternatives not named alt
- fix phi / gamma naming in summary for random parmater models
- change default n_draws for non mvn to 0.
- fix phi error in GenerateMDCEVData
- fix prior_phi_sd issue
- remove stringr/tidyselect as dependencies
- changed hybrid0 to use log(numeraire) in utility function

rmdcev v1.2.0 (Release date: 2020-08-12)
==============

Changes:

Major changes as part of R Journal revision

** Added estimation and simulation capabilities for environmental economics KT formulation (von Haefen and Phaneuf, 2005)
** Changed psi argument of formula to incorporate alternative-specific constants for psi by default
** Changed default prior distribution for alpha parameter (beta(1,1) which is uniform(0,1) on transformed scale)
** Reformulated GenerateMDCEVData to accept income, price, dat_psi, and dat_phi data
** User can now set starting values for LC model
** default standard errors is now deltamethod
** revised dependcies to reflect new rstan requirements
** vignette coming soon

rmdcev v1.1.2 (Release date: 2019-11-22)
==============

Changes:

** reconfigure package to fit with rstantools
** Fix bug to allow Hessian = FALSE **


rmdcev v1.1.1 (Release date: 2019-11-22)
==============

Changes:

** Minor changes to be compatible with rstan 2.21 **


rmdcev v1.1.0 (Release date: 2019-10-15)
==============

Changes:

** Major change to function names and data input **

* Changed function name FitMDCEV to mdcev
* Changed function name SimulateMDCEV to mdcev.sim
* All summary functions can now be called with summary(.)
* Created new data object mdcev.data

